apps/homepage/deployment-homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    checkov.io/skip1: |
      CKV_K8S_38=The service account token is necessary to query service status.
    checkov.io/skip2: |
      CKV2_K8S_6=Using a CiliumNetworkPolicy in place of NetworkPolicy
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:v0.10.9@sha256:b6d732817572f9af99ec168b10641b8f7820f30cfa5a5cc5c68f1e291804bec8"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
          resources:
            limits:
              cpu: 500m
              memory: 500M
            requests:
              cpu: 10m
              memory: 150M
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /app/config/custom.js
              name: homepage-config
              subPath: custom.js
            - mountPath: /app/config/custom.css
              name: homepage-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: homepage-config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: homepage-config
              subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: homepage-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: homepage-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: homepage-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: homepage-config
              subPath: widgets.yaml
            - mountPath: /app/config/logs
              name: logs
            - mountPath: /app/secrets
              name: api-keys
      securityContext:
        fsGroup: 11912
        runAsNonRoot: true
        runAsUser: 11912
        runAsGroup: 11912
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: api-keys
          secret:
            secretName: api-keys
        - name: logs
          emptyDir: {}
